[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/img/sprites/enemy/the_vine_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://assets/audio/sfx/Bosses/TheJaw_SFX/boss_krogan_hit_01.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/Scripts/AI/kronusBoss2.gd" type="Script" id=3]
[ext_resource path="res://assets/img/UI/bosses/boss kronus/2 faste cornice kronus.png" type="Texture" id=4]
[ext_resource path="res://assets/audio/sfx/Bosses/TheJaw_SFX/boss_krogan_attack_earthquake.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/img/UI/bosses/boss kronus/2 fase vita kronus.png" type="Texture" id=6]
[ext_resource path="res://assets/audio/sfx/Bosses/TheJaw_SFX/boss_krogan_death.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/Scripts/AI/props/Kronus/KronusMissile.gd" type="Script" id=8]
[ext_resource path="res://scenes/pg/bosses/props/Kronus/KronusMissileBullet.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Scripts/UI/HealthDisplay.gd" type="Script" id=10]
[ext_resource path="res://scenes/pg/bosses/props/TheGun/BulletRifle.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/pg/bosses/props/Kronus/Lava Column.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=2]
resource_name = "died"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "death"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("SFX")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 15, 16 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("SFX")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0576171,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( 0 )
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop_hit"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "choose_state"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "lavastomp"
length = 3.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.13, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.37 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "updateCounter"
} ]
}

[sub_resource type="Animation" id=16]
resource_name = "missile"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "missile_shoot"
} ]
}

[sub_resource type="Animation" id=17]
resource_name = "shotgun"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shotgun_shoot"
} ]
}

[sub_resource type="CapsuleShape2D" id=15]
radius = 19.0

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 8.4275, 21.8633 )

[node name="KronusBoss" type="KinematicBody2D" groups=["enemy", "pausable"]]
z_index = -1
collision_layer = 4
collision_mask = 5
script = ExtResource( 3 )
HP = 20
bullet = ExtResource( 11 )
lava_column = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.772251, -20.8911 )
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 1 )
hframes = 3
vframes = 9
frame = 15
region_rect = Rect2( 9, 14, 63, 96 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/died = SubResource( 2 )
anims/hit = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/lavastomp = SubResource( 9 )
anims/missile = SubResource( 16 )
anims/shotgun = SubResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
shape = SubResource( 15 )

[node name="Pivot" type="Node2D" parent="."]
scale = Vector2( -1, 1 )

[node name="MissilePos" type="Position2D" parent="Pivot"]
position = Vector2( 120, 1 )

[node name="HitBox" type="Area2D" parent="Pivot"]
position = Vector2( -8.5, 0 )
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/HitBox"]
shape = SubResource( 14 )

[node name="HealthDisplay" type="Node2D" parent="."]

[node name="HealthBar" type="TextureProgress" parent="HealthDisplay"]
margin_right = 40.0
margin_bottom = 40.0
max_value = 3.0
value = 3.0

[node name="Label" type="Label" parent="HealthDisplay"]
margin_left = -20.1815
margin_top = -77.7829
margin_right = 19.8185
margin_bottom = -63.7829

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="StompTimer" type="Timer" parent="."]

[node name="AttackCooldownTimer" type="Timer" parent="."]

[node name="Missile" type="Node2D" parent="."]
script = ExtResource( 8 )
bullet = ExtResource( 9 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthContainer" type="Node2D" parent="UI"]
position = Vector2( 2472, 968 )
script = ExtResource( 10 )

[node name="TheLeg1" type="Sprite" parent="UI/HealthContainer"]
position = Vector2( -989, 0.241399 )
scale = Vector2( 0.50778, 0.548868 )
texture = ExtResource( 4 )

[node name="HealthBar" type="TextureProgress" parent="UI/HealthContainer"]
margin_left = -1324.0
margin_top = -19.0
margin_right = -656.0
margin_bottom = 47.0
max_value = 20.0
value = 20.0
texture_progress = ExtResource( 6 )
nine_patch_stretch = true

[node name="LavaColumnContainer" type="Node" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="StompTimer" to="." method="_on_StompTimer_timeout"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_AttackCooldownTimer_timeout"]
[connection signal="HasShootMissile" from="Missile" to="." method="_on_Missile_HasShootMissile"]
